Fixing layout issues

--- a/site/css/home.scss
+++ b/site/css/home.scss
@@ -52,6 +52,10 @@
         border-radius: 1em;
         padding: 0.2em 0.5em;
         margin: 2px 10px 1px 0px;
+
+        &:first-child {
+            margin-left: auto;
+        }
     }
 }
 
