--- a/site/css/post.scss
+++ b/site/css/post.scss
@@ -41,7 +41,6 @@ article h2 {
     display: flex;
     flex-direction: row;
     width: 50%;
-    min-height: 50vw;
 
     canvas {
         flex: 1;
